# docs_creator

./: .dockerignore  .env.example  .gitignore  .mutmut-cache  .mutmut_config  CONFLUENCE_SETUP.md  Dockerfile  Makefile  README.md  TESTING.md  api.py  docker-compose.yml  example.py  main.py  pyproject.toml  quick-start.md  run_docs_assistant.py  setup.py  test_routes.py
api/: confluence.py  docstrings.py  endpoints.py  endpoints_old.py  exceptions.py  reports.py  scanning.py  schemas.py  static_files.py
api/docs/: __init__.py  latex.py  markdown.py  uml.py
archive/streamlit/: file_browser.py  streamlit_app.py
core/: config.py  openai_pricing.py
demo_sample_project/: __init__.py  main.py  models.py  services.py  utils.py
fastdoc/: cli.py  models.py  plantuml_generator.py  scanner.py  uml_analyzer.py
frontend/: index.html  index_new.html  script.js  script_new.js  styles.css  styles_new.css
models/: requests.py  responses.py
project/app/: dependencies.py  main.py  models.py  schemas.py  services.py
project/app/routers/: items.py  users.py
project/tests/: test_items.py  test_users.py
reports/: business_overview.json  comprehensive_report.json  openai_costs.json  openai_settings.json
reports/coverage_history/: coverage_history.json
reports/docs/: api_reference.md  changelog.md  code_structure.md  confluence_master.md  docstring_report.md  faq.md  getting_started.md  index.md  overview.md  uml_diagrams.md
reports/latex/: API_Documentation_29_07_2025.tex  documentation_20250728_234158.tex  documentation_20250728_234306.tex  documentation_20250728_234510.tex  documentation_20250729_000403.tex  documentation_20250729_094608.tex
scripts/: patcher.py  streamlit_app.py
services/: business_service.py  confluence_service.py  cost_tracking_service.py  coverage_tracker.py  docstring_service.py  latex_service.py  markdown_service.py  openai_service.py  patcher.py  report_service.py  scanner_service.py  uml_service.py
static/: dashboard.js
templates/: dashboard.html  dashboard1.html  dashboard_simple.html  edit_docstring.html  index.html  login.html  uml.html
templates/latex/: main.tex
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/regression/: test_scanner_regression.py
tests/unit/fastdoc/: test_scanner.py
tests/unit/services/: test_confluence_service.py  test_coverage_tracker.py  test_scanner_service.py
