[tool.poetry]
name = 'fastdoc'
version = '0.1.0'
description = 'FastAPI doc-coverage scanner + dashboard'
authors = ['Bartosz Kobylinski']

[tool.poetry.dependencies]
python = '^3.10'
typer = '^0.16.0'
pandas = "^2.3"
streamlit = "^1.46"
openai = "^1.0"
fastapi = "^0.115.0"
uvicorn = "^0.35.0"
python-multipart = "^0.0.6"
jinja2 = "^3.1.0"
atlassian-python-api = "^3.41.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0"
flake8 = "^6.0"
mypy = "^1.0"
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"